<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">Nmedia!</string>
    <string name="likes" translatable="false">0</string>
    <string name="repost" translatable="false">3</string>
    <string name="views" translatable="false">500</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="menu_remove" translatable="false">Remove</string>
    <string name="save">Post text</string>
    <string name="empty" translatable="false">Поле не может быть пустым!</string>
    <string name="menu_edit" translatable="false">Edit</string>
    <string name="remove">Remove</string>
    <string name="description_share" translatable="false">Share</string>
    <string name="choser_share_post" translatable="false">Share</string>
    <string name="google_play_unavailable" translatable="false">Google Api Недоступно</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_save_post" translatable="false">User %1$s add new post:</string>
    <string name="notification_test" translatable="false">Test %1$s</string>
    <string name="notification_user_content_post" translatable="false">Текст поста: "%1$s"</string>
    <string name="network_error" translatable="false">Network error</string>
    <string name="empty_posts" translatable="false">There is not posts</string>
    <string name="retry_loading" translatable="false">Retry</string>
    <string name="new_posts" translatable="false">Свежие посты</string>
    <string name="save_menu">Save</string>
    <string name="clear">Clear</string>
    <string name="image_pick_error" translatable="false">Image pick error</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_button">Sign in</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="retry_password">Retry password</string>
    <string name="reg_name">Name</string>
    <string name="reg_sign_up">Sign up</string>
    <string name="downland_avatar" translatable="false">Downland avatar</string>
    <string name="field_empty" translatable="false">Все поля регистрации должны быть заполнены, включая аватар</string>
    <string name="password_different" translatable="false">Пароли не совпадают</string>
    <string name="field_empty_password_different" translatable="false">Все поля регистрации должны быть заполнены, включая аватар. Пароли не совпадают!</string>
</resources>